@@ -1,3 +1,15 @@
+2008-05-28  Anthony Ricaud  <rik24d@gmail.com>
+
+        User stylesheets are now non-editable and displayed as user-stylesheets
+
+        <https://bugs.webkit.org/show_bug.cgi?id=17602>
+        <rdar://problem/5967637>
+
+        Reviewed by Tim Hatcher.
+
+        * English.lproj/localizedStrings.js: Added a string
+        * page/inspector/StylesSidebarPane.js:
+
 2008-05-28  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Mitz.
